my first  commit

--- a/components/header.html
+++ b/components/header.html
@@ -26,6 +26,7 @@
                 ><span
                   class="text-color position-absolute start-100 translate-middle-y"
                   id="wishlist-badge"
+                  wishitem-count="0"
                 >
                   0
                   <span class="visually-hidden">Wishlist</span>
@@ -38,10 +39,11 @@
                 <i class="text-color fas fa-shopping-cart"></i
                 ><span
                   class="text-color position-absolute start-100 translate-middle-y"
-                  id="cart-badge"
+                  cartitem-count="0"
+                  data-cart-badge="true"
                 >
                   0
-                  <span class="visually-hidden">Carts Items</span>
+                  <span class="visually-hidden">Cart Items</span>
                 </span>
               </a>
             </button>
@@ -909,6 +911,7 @@
                   ><span
                     class="text-color position-absolute start-100 translate-middle-y"
                     id="wishlist-badge"
+                    wishitem-count="0"
                   >
                     0
                     <span class="visually-hidden">Wishlist</span>
@@ -925,10 +928,11 @@
                   <i class="text-color fas fa-shopping-cart"></i
                   ><span
                     class="text-color position-absolute start-100 translate-middle-y"
-                    id="cart-badge"
+                    cartitem-count="0"
+                    data-cart-badge="true"
                   >
                     0
-                    <span class="visually-hidden">Carts Items</span>
+                    <span class="visually-hidden">Cart Items</span>
                   </span>
                 </a>
               </button>
