my first  commit

--- a/components/header.html
+++ b/components/header.html
@@ -24,12 +24,11 @@
               >
                 <i class="text-color fas fas fa-heart"></i
                 ><span
-                  class="text-color position-absolute start-100 translate-middle-y"
-                  id="wishlist-badge"
-                  wishitem-count="0"
+                  class="text-color position-absolute start-100 translate-middle-y wishlist-badge"
+                  data-wishlist-badge="true"
                 >
                   0
-                  <span class="visually-hidden">Wishlist</span>
+                  <span class="visually-hidden">Wishlist Items</span>
                 </span>
               </a>
             </button>
@@ -740,12 +739,11 @@
                 >
                   <i class="text-color fas fas fa-heart"></i
                   ><span
-                    class="text-color position-absolute start-100 translate-middle-y"
-                    id="wishlist-badge"
-                    wishitem-count="0"
+                    class="text-color position-absolute start-100 translate-middle-y wishlist-badge"
+                    data-wishlist-badge="true"
                   >
                     0
-                    <span class="visually-hidden">Wishlist</span>
+                    <span class="visually-hidden">Wishlist Items</span>
                   </span>
                 </a>
               </button>
