--- a/components/header.html
+++ b/components/header.html
@@ -769,14 +769,9 @@
             <!-- Signup Button -->
             <button
               class="btn-signup d-none d-lg-flex align-items-center justify-content-center"
-              onclick="changeSignUp()"
-            >
-              Sign Up
-            </button>
-            <button
-              class="btn-signup mt-auto d-lg-none"
-              onclick="changeSignUp()"
-            >
+              id="logtext"
+            ></button>
+            <button class="btn-signup mt-auto d-lg-none" id="logtext">
               Sign Up
             </button>
           </div>
