--- a/components/header.html
+++ b/components/header.html
@@ -769,10 +769,15 @@
             <!-- Signup Button -->
             <button
               class="btn-signup d-none d-lg-flex align-items-center justify-content-center"
-              id="logtext"
-            ></button>
-            <button class="btn-signup mt-auto d-lg-none" id="logtext">
-              Sign Up
+              
+              onclick="headerBtn()"
+            ><span id="authText">Sign Up</span></button>
+            <button
+              class="btn-signup mt-auto d-lg-none"
+              
+              onclick="headerBtn()"
+            >
+            <span id="authText">Sign Up</span>
             </button>
           </div>
         </div>
