--- a/components/footer.html
+++ b/components/footer.html
@@ -43,7 +43,7 @@
             <h5>Customer Support</h5>
             <ul class="link-widget p-0">
               <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="privacy_policy.html">Privacy Policy</a></li>
               <li><a href="#">Terms & Conditions</a></li>
               <li><a href="#">Product Returns</a></li>
               <li><a href="#">Wholesale Policy</a></li>
