--- a/components/footer.html
+++ b/components/footer.html
@@ -44,9 +44,11 @@
             <ul class="link-widget p-0">
               <li><a href="contact.html">Contact Us</a></li>
               <li><a href="privacy_policy.html">Privacy Policy</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Product Returns</a></li>
-              <li><a href="#">Wholesale Policy</a></li>
+              <li>
+                <a href="terms-and-conditions.html">Terms & Conditions</a>
+              </li>
+              <li><a href="product-returns.html">Product Returns</a></li>
+              <li><a href="wholesale-policy.html">Wholesale Policy</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
