--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1398,6 +1398,15 @@ h5 > span {
   font-size: 16px !important;
 }
 
+.invalid-feedback{
+  font-size: 13px !important;
+}
+
+.form-check{
+    font-size: 14px !important;
+
+}
+
 /************************************* Page Cart CSS End *************************************/
 
 /******************************* Login & Signup Page CSS Start *******************************/
